--- a/Gerencia/src/View/JanelaClienteView.form
+++ b/Gerencia/src/View/JanelaClienteView.form
@@ -20,7 +20,7 @@
               <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="formularioCliente1" max="32767" attributes="0"/>
+                      <Component id="formularioCliente1" pref="478" max="32767" attributes="0"/>
                       <EmptySpace min="34" pref="34" max="-2" attributes="0"/>
                   </Group>
                   <Component id="tabelaClienteView1" max="32767" attributes="0"/>
