--- a/Gerencia/src/View/JanelaContaView.form
+++ b/Gerencia/src/View/JanelaContaView.form
@@ -28,10 +28,8 @@
                       <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                       <Component id="formularioContaInvestimento1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                      <Component id="formularioContaCorrienteView1" min="-2" max="-2" attributes="0"/>
-                      <Component id="botonesConta1" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="botonesConta1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="formularioContaCorrienteView1" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
