--- a/Gerencia/src/View/JanelaContaView.form
+++ b/Gerencia/src/View/JanelaContaView.form
@@ -18,7 +18,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-              <Component id="tabelaClienteView1" pref="590" max="32767" attributes="0"/>
+              <Component id="tabelaClienteView1" max="32767" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
