add clase moeda e diagramas de clase

--- a/Gerencia/src/View/ManipulaBotoesView.form
+++ b/Gerencia/src/View/ManipulaBotoesView.form
@@ -110,7 +110,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="24" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Saldo R$"/>
+            <Property name="text" type="java.lang.String" value="Saldo:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="saldo">
