--- a/Gerencia/src/View/BancoView.form
+++ b/Gerencia/src/View/BancoView.form
@@ -6,6 +6,9 @@
     <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection component="Form" name="iconImage" type="property"/>
     </Property>
+    <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
+      <Point value="[200, 100]"/>
+    </Property>
     <Property name="name" type="java.lang.String" value="Banco Amigo" noResource="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -31,7 +34,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTabbedPane1" pref="733" max="32767" attributes="0"/>
+                  <Component id="jTabbedPane1" pref="755" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
